[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/wojtekpil.biomes/nodes/subset/BiomeNodeSubset.gd" type="Script" id=1]

[node name="BiomeNodeMesh" type="GraphNode"]
margin_right = 191.0
margin_bottom = 124.0
rect_clip_content = true
title = "Subset"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 1, 0, 0, 1 )
slot/0/right_enabled = true
slot/0/right_type = 2
slot/0/right_color = Color( 0, 1, 0, 1 )
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color( 1, 0, 0, 1 )
slot/1/right_enabled = false
slot/1/right_type = 2
slot/1/right_color = Color( 0, 1, 0, 1 )
slot/2/left_enabled = true
slot/2/left_type = 1
slot/2/left_color = Color( 1, 0, 0, 1 )
slot/2/right_enabled = false
slot/2/right_type = 2
slot/2/right_color = Color( 0, 1, 0, 1 )
slot/3/left_enabled = true
slot/3/left_type = 1
slot/3/left_color = Color( 1, 1, 0, 1 )
slot/3/right_enabled = false
slot/3/right_type = 2
slot/3/right_color = Color( 0, 1, 0, 1 )
slot/4/left_enabled = false
slot/4/left_type = 5
slot/4/left_color = Color( 1, 0, 0, 1 )
slot/4/right_enabled = false
slot/4/right_type = 2
slot/4/right_color = Color( 0, 1, 0, 1 )
slot/5/left_enabled = false
slot/5/left_type = 5
slot/5/left_color = Color( 1, 0, 0, 1 )
slot/5/right_enabled = false
slot/5/right_type = 2
slot/5/right_color = Color( 0, 1, 0, 1 )
slot/6/left_enabled = false
slot/6/left_type = 5
slot/6/left_color = Color( 0, 1, 1, 1 )
slot/6/right_enabled = false
slot/6/right_type = 2
slot/6/right_color = Color( 0, 1, 0, 1 )
slot/7/left_enabled = false
slot/7/left_type = 5
slot/7/left_color = Color( 0, 1, 1, 1 )
slot/7/right_enabled = false
slot/7/right_type = 2
slot/7/right_color = Color( 0, 1, 0, 1 )
slot/8/left_enabled = true
slot/8/left_type = 5
slot/8/left_color = Color( 0, 1, 1, 1 )
slot/8/right_enabled = false
slot/8/right_type = 2
slot/8/right_color = Color( 0, 1, 0, 1 )
slot/9/left_enabled = false
slot/9/left_type = 5
slot/9/left_color = Color( 1, 0, 0, 1 )
slot/9/right_enabled = false
slot/9/right_type = 2
slot/9/right_color = Color( 0, 1, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshLOD0Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 175.0
margin_bottom = 38.0
text = "Mesh LOD0"

[node name="MeshLOD1Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 175.0
margin_bottom = 53.0
text = "Mesh LOD1"

[node name="MeshLOD2Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 54.0
margin_right = 175.0
margin_bottom = 68.0
text = "Mesh LOD2"

[node name="ColliderLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 69.0
margin_right = 175.0
margin_bottom = 83.0
text = "CollisionShape"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 84.0
margin_right = 175.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="HBoxContainer4"]
margin_top = 5.0
margin_right = 81.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Footprint"
align = 2

[node name="Footprint" type="SpinBox" parent="HBoxContainer4"]
margin_left = 85.0
margin_right = 159.0
margin_bottom = 24.0
min_value = 5.0
max_value = 1000.0
value = 5.0
allow_greater = true

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 109.0
margin_right = 175.0
margin_bottom = 133.0

[node name="Label" type="Label" parent="HBoxContainer5"]
margin_top = 5.0
margin_right = 81.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Frequency"
align = 2

[node name="Frequency" type="SpinBox" parent="HBoxContainer5"]
margin_left = 85.0
margin_right = 159.0
margin_bottom = 24.0
max_value = 1.0
step = 0.001
value = 0.5

[node name="HBoxContainer7" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 134.0
margin_right = 175.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="HBoxContainer7"]
margin_top = 13.0
margin_right = 79.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Shadows"
align = 2

[node name="ShadowsButton" type="CheckButton" parent="HBoxContainer7"]
margin_left = 83.0
margin_right = 159.0
margin_bottom = 40.0

[node name="HBoxContainer8" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 175.0
margin_right = 175.0
margin_bottom = 215.0

[node name="Label" type="Label" parent="HBoxContainer8"]
margin_top = 13.0
margin_right = 79.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Fill Pass"
align = 2

[node name="FillPassButton" type="CheckButton" parent="HBoxContainer8"]
margin_left = 83.0
margin_right = 159.0
margin_bottom = 40.0

[node name="MeshTransform" type="Label" parent="."]
margin_left = 16.0
margin_top = 216.0
margin_right = 175.0
margin_bottom = 230.0
text = "Mesh Transform"

[node name="HBoxContainer6" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 231.0
margin_right = 175.0
margin_bottom = 251.0

[node name="Label" type="Label" parent="HBoxContainer6"]
margin_top = 3.0
margin_right = 117.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Color Preview"
align = 2

[node name="DebColor" type="ColorPickerButton" parent="HBoxContainer6"]
margin_left = 121.0
margin_right = 159.0
margin_bottom = 20.0
text = "Pick"
edit_alpha = false
[connection signal="close_request" from="." to="." method="_on_BiomeNodeMesh_close_request"]
[connection signal="resize_request" from="." to="." method="_on_BiomeNodeMesh_resize_request"]
